--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -8,48 +8,12 @@ add_library(native-lib
 
 set(JNI_LIBS_DIR ${CMAKE_SOURCE_DIR}/src/main/jniLibs)
 
-
-add_library(avcodec
-            SHARED
-            IMPORTED )
-set_target_properties(avcodec
-                      PROPERTIES IMPORTED_LOCATION
-                      ${JNI_LIBS_DIR}/${ANDROID_ABI}/libavcodec.so )
-
-add_library( avfilter
-             SHARED
-             IMPORTED )
-set_target_properties(avfilter
-                      PROPERTIES IMPORTED_LOCATION
-                      ${JNI_LIBS_DIR}/${ANDROID_ABI}/libavfilter.so )
-
-add_library(swscale
-            SHARED
-            IMPORTED )
-set_target_properties(swscale
-                      PROPERTIES IMPORTED_LOCATION
-                      ${JNI_LIBS_DIR}/${ANDROID_ABI}/libswscale.so )
-
-add_library(avformat
-            SHARED
-            IMPORTED )
-set_target_properties(avformat
-                      PROPERTIES IMPORTED_LOCATION
-                      ${JNI_LIBS_DIR}/${ANDROID_ABI}/libavformat.so )
-
 add_library(avutil
             SHARED
             IMPORTED )
 set_target_properties(avutil
                       PROPERTIES IMPORTED_LOCATION
                       ${JNI_LIBS_DIR}/${ANDROID_ABI}/libavutil.so )
-
-add_library(avdevice
-            SHARED
-            IMPORTED )
-set_target_properties(avdevice
-                      PROPERTIES IMPORTED_LOCATION
-                      ${JNI_LIBS_DIR}/${ANDROID_ABI}/libavdevice.so )
 
 add_library(swresample
             SHARED
@@ -65,8 +29,50 @@ set_target_properties(avresample
                       PROPERTIES IMPORTED_LOCATION
                       ${JNI_LIBS_DIR}/${ANDROID_ABI}/libavresample.so )
 
+add_library(swscale
+            SHARED
+            IMPORTED )
+set_target_properties(swscale
+                      PROPERTIES IMPORTED_LOCATION
+                      ${JNI_LIBS_DIR}/${ANDROID_ABI}/libswscale.so )
+
+add_library(postproc
+            SHARED
+            IMPORTED )
+set_target_properties(postproc
+                      PROPERTIES IMPORTED_LOCATION
+                      ${JNI_LIBS_DIR}/${ANDROID_ABI}/libpostproc.so )
+
+add_library(avcodec
+            SHARED
+            IMPORTED )
+set_target_properties(avcodec
+                      PROPERTIES IMPORTED_LOCATION
+                      ${JNI_LIBS_DIR}/${ANDROID_ABI}/libavcodec.so )
+
+add_library(avformat
+            SHARED
+            IMPORTED )
+set_target_properties(avformat
+                      PROPERTIES IMPORTED_LOCATION
+                      ${JNI_LIBS_DIR}/${ANDROID_ABI}/libavformat.so )
+
+add_library( avfilter
+             SHARED
+             IMPORTED )
+set_target_properties(avfilter
+                      PROPERTIES IMPORTED_LOCATION
+                      ${JNI_LIBS_DIR}/${ANDROID_ABI}/libavfilter.so )
+
+add_library(avdevice
+            SHARED
+            IMPORTED )
+set_target_properties(avdevice
+                      PROPERTIES IMPORTED_LOCATION
+                      ${JNI_LIBS_DIR}/${ANDROID_ABI}/libavdevice.so )
+
 include_directories(${JNI_LIBS_DIR}/includes)
 
 target_link_libraries(native-lib
-                      avcodec avfilter swscale avformat avutil swresample avresample avdevice
+                      avutil swresample avresample swscale postproc avcodec avformat avfilter avdevice
                       ${log-lib} )
