--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.4.1)
 
 find_library(log-lib log)
+find_library(android-lib android)
 
 add_library(native-lib
             SHARED
@@ -61,4 +62,4 @@ include_directories(${JNI_LIBS_DIR}/includes)
 
 target_link_libraries(native-lib
                       avutil swresample swscale avcodec avformat avfilter avdevice
-                      ${log-lib} )
+                      ${log-lib} ${android-lib} )
